fixing layout issue on movie page

--- a/src/components/moviesList/styles.module.scss
+++ b/src/components/moviesList/styles.module.scss
@@ -45,6 +45,8 @@
 
     @include respond(tab-port) {
       opacity: 1;
+      font-size: var(--font-l);
+
     }
   }
 
